{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 92,
  "lineage": "91de628f-e32b-1750-0794-737e9d6494c6",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "chaiturg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/chaiturg-resources/providers/Microsoft.Network/loadBalancers/TestLoadBalancer/frontendIPConfigurations/PublicIPAddress",
                "load_balancer_rules": [
                  "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/chaiturg-resources/providers/Microsoft.Network/loadBalancers/TestLoadBalancer/loadBalancingRules/LBRule"
                ],
                "name": "PublicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/chaiturg-resources/providers/Microsoft.Network/publicIPAddresses/chaiturg-PIP"
              }
            ],
            "id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/chaiturg-resources/providers/Microsoft.Network/loadBalancers/TestLoadBalancer",
            "location": "westeurope",
            "name": "TestLoadBalancer",
            "resource_group_name": "chaiturg-resources",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_public_ip.chaiturg",
            "azurerm_resource_group.chaiturg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "chaiturg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/chaiturg-resources/providers/Microsoft.Network/networkInterfaces/chaiturg-NIC/ipConfigurations/internal"
            ],
            "id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/chaiturg-resources/providers/Microsoft.Network/loadBalancers/TestLoadBalancer/backendAddressPools/BackEndAddressPool",
            "loadbalancer_id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/chaiturg-resources/providers/Microsoft.Network/loadBalancers/TestLoadBalancer",
            "name": "BackEndAddressPool"
          },
          "dependencies": [
            "azurerm_lb.chaiturg",
            "azurerm_public_ip.chaiturg",
            "azurerm_resource_group.chaiturg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "chaiturg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/chaiturg-resources/providers/Microsoft.Network/loadBalancers/TestLoadBalancer/probes/sql-probe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/chaiturg-resources/providers/Microsoft.Network/loadBalancers/TestLoadBalancer",
            "name": "sql-probe",
            "number_of_probes": 2,
            "port": 1433,
            "probe_threshold": 1,
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.chaiturg",
            "azurerm_public_ip.chaiturg",
            "azurerm_resource_group.chaiturg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "chaiturg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_port": 3389,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/chaiturg-resources/providers/Microsoft.Network/loadBalancers/TestLoadBalancer/frontendIPConfigurations/PublicIPAddress",
            "frontend_ip_configuration_name": "PublicIPAddress",
            "frontend_port": 3389,
            "id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/chaiturg-resources/providers/Microsoft.Network/loadBalancers/TestLoadBalancer/loadBalancingRules/LBRule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/chaiturg-resources/providers/Microsoft.Network/loadBalancers/TestLoadBalancer",
            "name": "LBRule",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.chaiturg",
            "azurerm_public_ip.chaiturg",
            "azurerm_resource_group.chaiturg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "chaiturg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/chaiturg-resources/providers/Microsoft.Network/networkInterfaces/chaiturg-NIC",
            "internal_domain_name_suffix": "ra3lbtvgtqzunpqxizlnimzute.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/chaiturg-resources/providers/Microsoft.Network/virtualNetworks/chaiturg-VN/subnets/internal"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-4C-DA-28",
            "name": "chaiturg-NIC",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "chaiturg-resources",
            "virtual_machine_id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/chaiturg-resources/providers/Microsoft.Compute/virtualMachines/chaiturg-VM"
          },
          "dependencies": [
            "azurerm_resource_group.chaiturg",
            "azurerm_subnet.chaiturg",
            "azurerm_virtual_network.chaiturg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "chaiturg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/chaiturg-resources/providers/Microsoft.Network/loadBalancers/TestLoadBalancer/backendAddressPools/BackEndAddressPool",
            "id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/chaiturg-resources/providers/Microsoft.Network/networkInterfaces/chaiturg-NIC/ipConfigurations/internal|/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/chaiturg-resources/providers/Microsoft.Network/loadBalancers/TestLoadBalancer/backendAddressPools/BackEndAddressPool",
            "ip_configuration_name": "internal",
            "network_interface_id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/chaiturg-resources/providers/Microsoft.Network/networkInterfaces/chaiturg-NIC"
          },
          "dependencies": [
            "azurerm_lb.chaiturg",
            "azurerm_lb_backend_address_pool.chaiturg1",
            "azurerm_network_interface.chaiturg",
            "azurerm_public_ip.chaiturg",
            "azurerm_resource_group.chaiturg",
            "azurerm_subnet.chaiturg",
            "azurerm_virtual_network.chaiturg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "chaiturg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/chaiturg-resources/providers/Microsoft.Network/networkInterfaces/chaiturg-NIC|/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/chaiturg-resources/providers/Microsoft.Network/networkSecurityGroups/testsecuritygroup1",
            "network_interface_id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/chaiturg-resources/providers/Microsoft.Network/networkInterfaces/chaiturg-NIC",
            "network_security_group_id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/chaiturg-resources/providers/Microsoft.Network/networkSecurityGroups/testsecuritygroup1"
          },
          "dependencies": [
            "azurerm_network_interface.chaiturg",
            "azurerm_network_security_group.chaiturg",
            "azurerm_resource_group.chaiturg",
            "azurerm_subnet.chaiturg",
            "azurerm_virtual_network.chaiturg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "chaiturg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/chaiturg-resources/providers/Microsoft.Network/networkSecurityGroups/testsecuritygroup1",
            "location": "westeurope",
            "name": "testsecuritygroup1",
            "resource_group_name": "chaiturg-resources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "test123",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.chaiturg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "MSSQLRule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "1433",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/chaiturg-resources/providers/Microsoft.Network/networkSecurityGroups/testsecuritygroup1/securityRules/MSSQLRule",
            "name": "MSSQLRule",
            "network_security_group_name": "testsecuritygroup1",
            "priority": 1001,
            "protocol": "Tcp",
            "resource_group_name": "chaiturg-resources",
            "source_address_prefix": "167.220.255.0/25",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.chaiturg",
            "azurerm_resource_group.chaiturg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "chaiturg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/chaiturg-resources/providers/Microsoft.Network/publicIPAddresses/chaiturg-PIP",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "chaiturg-PIP",
            "resource_group_name": "chaiturg-resources",
            "sku": "Basic",
            "sku_tier": "Regional",
            "timeouts": {
            }
          },
          "dependencies": [
            "azurerm_resource_group.chaiturg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "chaiturg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/chaiturg-resources/providers/Microsoft.Network/virtualNetworks/chaiturg-VN/subnets/internal",
            "name": "internal",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "chaiturg-resources",
            "virtual_network_name": "chaiturg-VN"
          },
          "dependencies": [
            "azurerm_resource_group.chaiturg",
            "azurerm_virtual_network.chaiturg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "chaiturg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/chaiturg-resources/providers/Microsoft.Network/virtualNetworks/chaiturg-VN/subnets/internal",
            "network_security_group_id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/chaiturg-resources/providers/Microsoft.Network/networkSecurityGroups/testsecuritygroup1",
            "subnet_id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/chaiturg-resources/providers/Microsoft.Network/virtualNetworks/chaiturg-VN/subnets/internal"
          },
          "dependencies": [
            "azurerm_network_security_group.chaiturg",
            "azurerm_resource_group.chaiturg",
            "azurerm_subnet.chaiturg",
            "azurerm_virtual_network.chaiturg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "chaiturg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "ceb03a88-9ca6-4633-be17-4656d433349c",
            "id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/chaiturg-resources/providers/Microsoft.Network/virtualNetworks/chaiturg-VN",
            "location": "westeurope",
            "name": "chaiturg-VN",
            "resource_group_name": "chaiturg-resources",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/chaiturg-resources/providers/Microsoft.Network/virtualNetworks/chaiturg-VN/subnets/internal",
                "name": "internal",
                "security_group": "/subscriptions/e35bea4b-678e-4390-b4c2-7274791aa941/resourceGroups/chaiturg-resources/providers/Microsoft.Network/networkSecurityGroups/testsecuritygroup1"
              }
            ],
            "timeouts": {
            }
          },
          "dependencies": [
            "azurerm_resource_group.chaiturg"
          ]
        }
      ]
    }
  ]
}